@@ -1,15 +1,15 @@
 package br.com.fiap.produtomvc.services;
 
+import br.com.fiap.produtomvc.dto.ProdutoDTO;
 import br.com.fiap.produtomvc.models.Loja;
 import br.com.fiap.produtomvc.models.Produto;
+import br.com.fiap.produtomvc.repository.LojaRepository;
 import br.com.fiap.produtomvc.repository.ProdutoRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import javax.sound.sampled.Port;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,35 +17,38 @@ import java.util.stream.Collectors;
 public class ProdutoService {
 
     @Autowired
-    private ProdutoRepository repository;
+    private ProdutoRepository produtoRepository;
+
+    @Autowired
+    private LojaRepository lojaRepository;
 
     @Transactional
-    public Produto insert(Produto produto){
-        return repository.save(produto);
+    public ProdutoDTO insert(ProdutoDTO dto){
+        Produto produto = new Produto();
+        copyDtoToEntity(dto, produto);
+        produtoRepository.save(produto);
+        return new ProdutoDTO(produto);
     }
 
     @Transactional(readOnly = true)
-    public List<Produto> findAll(){
-        return repository.findAll();
+    public List<ProdutoDTO> findAll(){
+        return produtoRepository.findAll().stream().map(ProdutoDTO::new).collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
-    public Produto findById(Long id){
-        /*
-        Ele vai no banco e busca todos os dados de produto
-         */
-        Produto produto = repository.findById(id).orElseThrow(
+    public ProdutoDTO findById(Long id){
+        Produto produto = produtoRepository.findById(id).orElseThrow(
                 ()-> new IllegalArgumentException("Recurso não encontrado para o id: " + id)
         );
-        return produto;
+        return new ProdutoDTO(produto);
     }
 
     @Transactional(readOnly = true)
-    public List<Produto> findByLoja(Long idLoja) {
-        List<Produto> list = repository.findAll();
+    public List<ProdutoDTO> findByLoja(Long idLoja) {
+        List<Produto> list = produtoRepository.findAll();
         return list.stream()
                 .filter(p -> p.getLojas().stream().anyMatch(l -> l.getId().equals(idLoja)))
-                .collect(Collectors.toList());
+                .toList().stream().map(ProdutoDTO::new).collect(Collectors.toList());
     }
 
 
@@ -53,20 +56,20 @@ public class ProdutoService {
     Está recebendo o id e o produto entity com os dados atualizados
      */
     @Transactional
-    public Produto  update(Long id, Produto entity){
+    public ProdutoDTO update(Long id, ProdutoDTO dto){
         try{
             /*
             Pega a referência produto que já existe no banco, ou seja
             não trás os dados diferente do findById
              */
-            Produto produto = repository.getReferenceById(id);
+            Produto produto = produtoRepository.getReferenceById(id);
             /*
             Atualiaza o produto recuperado do banco com os dados do produto
             atualizado recebido
              */
-            atualizaProduto(entity, produto);
-            produto = repository.save(produto);
-            return produto;
+            copyDtoToEntity(dto,produto);
+            produto = produtoRepository.save(produto);
+            return new ProdutoDTO(produto);
 
         }catch(EntityNotFoundException e){
             throw new IllegalArgumentException("Recurso não encontrado para o id: " + id);
@@ -78,27 +81,26 @@ public class ProdutoService {
     Criando uma cópia, estou setando os dados que vieram do formulário no produto com referência
     ao id x
      */
-    private void atualizaProduto(Produto entity, Produto produto){
-        produto.setNome(entity.getNome());
-        produto.setCategoria(entity.getCategoria());
-        produto.setDescricao(entity.getDescricao());
-        produto.setValor(entity.getValor());
-
-        produto.getLojas().clear();
-        for (Loja loja :  entity.getLojas()){
-            Loja loja1 = new Loja();
-            loja1.setId(loja.getId());
-            produto.getLojas().add(loja1);
+    private void copyDtoToEntity(ProdutoDTO dto, Produto entity){
+        entity.setNome(dto.getNome());
+        entity.setDescricao(dto.getDescricao());
+        entity.setValor(dto.getValor());
+        entity.setCategoria(dto.getCategoria());
+        entity.getLojas().clear();
+        for(Loja item:dto.getLojas()){
+            Loja loja = lojaRepository.getReferenceById(item.getId());
+            entity.getLojas().add(loja);
         }
+
     }
 
     @Transactional
     public void delete(Long id){
-        if(!repository.existsById(id)){
+        if(!produtoRepository.existsById(id)){
             throw new IllegalArgumentException("Recurso não encontrado para o id: " + id);
         }
         try{
-            repository.deleteById(id);
+            produtoRepository.deleteById(id);
         }catch(Exception e){
             throw new IllegalArgumentException("Recurso não encontrado para o id: " + id);
         }
